Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51120

QProgressBar do not display progress on OS X when "textVisible" is false

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.5.1
    • None
    • OS X
    • macOS

    Description

      Only on Qt 5.5.1
      When set property "textVisible" to false progress bar not show progress
      Example attached.

      Attachments

        For Gerrit Dashboard: QTBUG-51120
        # Subject Branch Project Status CR V

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            ctin Konstantin
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes