src/widgets/styles/qmacstyle_mac.mm
@@ -4978,6 +4978,9 @@ QRect QMacStyle::subElementRect(SubElement sr, const QStyleOption *opt,
         break;
     }
     case SE_ProgressBarGroove:
+        // Wrong in the secondary dimension, but accurate enough in the main dimension.
+        rect  = opt->rect;
+        break;
     case SE_ProgressBarLabel:
         break;
     case SE_ProgressBarContents:
